// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-mega engine: nodeApp, opts: undefined 1`] = `
Array [
  Object {
    "code": "\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _default = async () => {
  function go() {}

  await go();
};

exports.default = _default;
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));
module.exports = exports.default;",
    "file": "async.js",
  },
  Object {
    "code": "\\"use strict\\";

require(\\"core-js/modules/es.symbol.description\\");

require(\\"core-js/modules/es.array.flat\\");

require(\\"core-js/modules/es.array.flat-map\\");

require(\\"core-js/modules/es.array.unscopables.flat\\");

require(\\"core-js/modules/es.array.unscopables.flat-map\\");

require(\\"core-js/modules/es.object.from-entries\\");

require(\\"core-js/modules/web.queue-microtask\\");

const set = new Set([1, 2, 3]);
[1, 2, 3].includes(2);
new Promise(() => {});
Promise.all();
fetch();
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "\\"use strict\\";

// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _lugiaWeb = require(\\"@lugia/lugia-web\\");

/**
 * Created Date: Friday, July 26th 2019, 4:44:28 pm
 * Author: hanjingbo@ysstech.com | jingboup@gmail.com
 * -----
 * Last Modified: Friday, July 26th 2019, 5:03:13 pm
 * Modified By: hanjingbo <hanjingbo@ysstech.com | jingboup@gmail.com>
 * -----
 * Copyright (c) 2019-present, #Lugia#.
 * ------------------------------------
 * JavaScript will save your soul!
 */
var _default = () => {
  return [React.createElement(_lugiaWeb.Button, null), React.createElement(_lugiaWeb.Alert, null)];
};

exports.default = _default;
module.exports = exports.default;",
    "file": "imports.js",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _react = _interopRequireDefault(require(\\"react\\"));

var _reactDom = _interopRequireDefault(require(\\"react-dom\\"));

// eslint-disable-next-line
// eslint-disable-next-line
_reactDom.default.render(_react.default.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireWildcard = require(\\"@babel/runtime/helpers/interopRequireWildcard\\");

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var React = _interopRequireWildcard(require(\\"react\\"));

// eslint-disable-next-line
function Hello({
  name,
  enthusiasmLevel = 1,
  onIncrement,
  onDecrement
}) {
  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

var _default = Hello; // helpers

exports.default = _default;

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}

module.exports = exports.default;",
    "file": "react.tsx",
  },
  Object {
    "code": "\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;
const x = {
  languageName: '',
  enthusiasmLevel: 1
};
var _default = x;
exports.default = _default;
module.exports = exports.default;",
    "file": "typescript.ts",
  },
]
`;

exports[`babel-preset-mega engine: nodeLib, opts: {"targets":{"node":4}} 1`] = `
Array [
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime-corejs3/helpers/interopRequireDefault\\");

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;

var _set = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/set\\"));

var _from = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/array/from\\"));

var _assign = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/object/assign\\"));

var _regenerator = _interopRequireDefault(require(\\"@babel/runtime-corejs3/regenerator\\"));

var _asyncToGenerator2 = _interopRequireDefault(require(\\"@babel/runtime-corejs3/helpers/asyncToGenerator\\"));

var _default =
/*#__PURE__*/
(0, _asyncToGenerator2.default)(
/*#__PURE__*/
_regenerator.default.mark(function _callee() {
  var go;
  return _regenerator.default.wrap(function _callee$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
          go = function _ref2() {};

          _context.next = 3;
          return go();

        case 3:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _callee);
}));

exports.default = _default;
(0, _assign.default)({}, {});
(0, _from.default)(new _set.default([1, 2, 3, 4, 4]));
module.exports = exports.default;",
    "file": "async.js",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime-corejs3/helpers/interopRequireDefault\\");

var _from = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/array/from\\"));

var _assign = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/object/assign\\"));

var _promise = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/promise\\"));

var _includes = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/instance/includes\\"));

var _set = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/set\\"));

require(\\"core-js/stable\\");

require(\\"regenerator-runtime/runtime\\");

var _context;

var set = new _set.default([1, 2, 3]);
(0, _includes.default)(_context = [1, 2, 3]).call(_context, 2);
new _promise.default(function () {});

_promise.default.all();

fetch();
(0, _assign.default)({}, {});
(0, _from.default)(new _set.default([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "\\"use strict\\";

// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "\\"use strict\\";

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;

var _lugiaWeb = require(\\"@lugia/lugia-web\\");

/**
 * Created Date: Friday, July 26th 2019, 4:44:28 pm
 * Author: hanjingbo@ysstech.com | jingboup@gmail.com
 * -----
 * Last Modified: Friday, July 26th 2019, 5:03:13 pm
 * Modified By: hanjingbo <hanjingbo@ysstech.com | jingboup@gmail.com>
 * -----
 * Copyright (c) 2019-present, #Lugia#.
 * ------------------------------------
 * JavaScript will save your soul!
 */
var _default = function _default() {
  return [React.createElement(_lugiaWeb.Button, null), React.createElement(_lugiaWeb.Alert, null)];
};

exports.default = _default;
module.exports = exports.default;",
    "file": "imports.js",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime-corejs3/helpers/interopRequireDefault\\");

var _react = _interopRequireDefault(require(\\"react\\"));

var _reactDom = _interopRequireDefault(require(\\"react-dom\\"));

// eslint-disable-next-line
// eslint-disable-next-line
_reactDom.default.render(_react.default.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireWildcard = require(\\"@babel/runtime-corejs3/helpers/interopRequireWildcard\\");

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;

var React = _interopRequireWildcard(require(\\"react\\"));

// eslint-disable-next-line
function Hello(_ref) {
  var name = _ref.name,
      _ref$enthusiasmLevel = _ref.enthusiasmLevel,
      enthusiasmLevel = _ref$enthusiasmLevel === void 0 ? 1 : _ref$enthusiasmLevel,
      onIncrement = _ref.onIncrement,
      onDecrement = _ref.onDecrement;

  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

var _default = Hello; // helpers

exports.default = _default;

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}

module.exports = exports.default;",
    "file": "react.tsx",
  },
  Object {
    "code": "\\"use strict\\";

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;
var x = {
  languageName: '',
  enthusiasmLevel: 1
};
var _default = x;
exports.default = _default;
module.exports = exports.default;",
    "file": "typescript.ts",
  },
]
`;

exports[`babel-preset-mega engine: nodeLib, opts: undefined 1`] = `
Array [
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime-corejs3/helpers/interopRequireDefault\\");

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;

var _set = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/set\\"));

var _from = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/array/from\\"));

var _assign = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/object/assign\\"));

var _default = async () => {
  function go() {}

  await go();
};

exports.default = _default;
(0, _assign.default)({}, {});
(0, _from.default)(new _set.default([1, 2, 3, 4, 4]));
module.exports = exports.default;",
    "file": "async.js",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime-corejs3/helpers/interopRequireDefault\\");

var _from = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/array/from\\"));

var _assign = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/object/assign\\"));

var _promise = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/promise\\"));

var _includes = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/instance/includes\\"));

var _set = _interopRequireDefault(require(\\"@babel/runtime-corejs3/core-js-stable/set\\"));

require(\\"core-js/stable\\");

require(\\"regenerator-runtime/runtime\\");

var _context;

const set = new _set.default([1, 2, 3]);
(0, _includes.default)(_context = [1, 2, 3]).call(_context, 2);
new _promise.default(() => {});

_promise.default.all();

fetch();
(0, _assign.default)({}, {});
(0, _from.default)(new _set.default([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "\\"use strict\\";

// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "\\"use strict\\";

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;

var _lugiaWeb = require(\\"@lugia/lugia-web\\");

/**
 * Created Date: Friday, July 26th 2019, 4:44:28 pm
 * Author: hanjingbo@ysstech.com | jingboup@gmail.com
 * -----
 * Last Modified: Friday, July 26th 2019, 5:03:13 pm
 * Modified By: hanjingbo <hanjingbo@ysstech.com | jingboup@gmail.com>
 * -----
 * Copyright (c) 2019-present, #Lugia#.
 * ------------------------------------
 * JavaScript will save your soul!
 */
var _default = () => {
  return [React.createElement(_lugiaWeb.Button, null), React.createElement(_lugiaWeb.Alert, null)];
};

exports.default = _default;
module.exports = exports.default;",
    "file": "imports.js",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime-corejs3/helpers/interopRequireDefault\\");

var _react = _interopRequireDefault(require(\\"react\\"));

var _reactDom = _interopRequireDefault(require(\\"react-dom\\"));

// eslint-disable-next-line
// eslint-disable-next-line
_reactDom.default.render(_react.default.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "\\"use strict\\";

var _interopRequireWildcard = require(\\"@babel/runtime-corejs3/helpers/interopRequireWildcard\\");

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;

var React = _interopRequireWildcard(require(\\"react\\"));

// eslint-disable-next-line
function Hello({
  name,
  enthusiasmLevel = 1,
  onIncrement,
  onDecrement
}) {
  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

var _default = Hello; // helpers

exports.default = _default;

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}

module.exports = exports.default;",
    "file": "react.tsx",
  },
  Object {
    "code": "\\"use strict\\";

var _Object$defineProperty = require(\\"@babel/runtime-corejs3/core-js-stable/object/define-property\\");

_Object$defineProperty(exports, \\"__esModule\\", {
  value: true
});

exports.default = void 0;
const x = {
  languageName: '',
  enthusiasmLevel: 1
};
var _default = x;
exports.default = _default;
module.exports = exports.default;",
    "file": "typescript.ts",
  },
]
`;

exports[`babel-preset-mega engine: webpackApp, opts: {"imports":[{"libraryName":"@lugia/lugia-web","libraryDirectory":"dist"}]} 1`] = `
Array [
  Object {
    "code": "import _regeneratorRuntime \\"./babel-preset-mega\\\\\\\\node_modules\\\\\\\\@babel\\\\\\\\runtime/regenerator\\";
import _asyncToGenerator \\"./babel-preset-mega\\\\\\\\node_modules\\\\\\\\@babel\\\\\\\\runtime/helpers/esm/asyncToGenerator\\";
export default
/*#__PURE__*/
_asyncToGenerator(
/*#__PURE__*/
_regeneratorRuntime.mark(function _callee() {
  var go;
  return _regeneratorRuntime.wrap(function _callee$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
          go = function _ref2() {};

          _context.next = 3;
          return go();

        case 3:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _callee);
}));
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "async.js",
  },
  Object {
    "code": "import \\"core-js/modules/es.symbol\\";
import \\"core-js/modules/es.symbol.description\\";
import \\"core-js/modules/es.symbol.async-iterator\\";
import \\"core-js/modules/es.symbol.has-instance\\";
import \\"core-js/modules/es.symbol.is-concat-spreadable\\";
import \\"core-js/modules/es.symbol.iterator\\";
import \\"core-js/modules/es.symbol.match\\";
import \\"core-js/modules/es.symbol.replace\\";
import \\"core-js/modules/es.symbol.search\\";
import \\"core-js/modules/es.symbol.species\\";
import \\"core-js/modules/es.symbol.split\\";
import \\"core-js/modules/es.symbol.to-primitive\\";
import \\"core-js/modules/es.symbol.to-string-tag\\";
import \\"core-js/modules/es.symbol.unscopables\\";
import \\"core-js/modules/es.array.concat\\";
import \\"core-js/modules/es.array.copy-within\\";
import \\"core-js/modules/es.array.fill\\";
import \\"core-js/modules/es.array.filter\\";
import \\"core-js/modules/es.array.find\\";
import \\"core-js/modules/es.array.find-index\\";
import \\"core-js/modules/es.array.flat\\";
import \\"core-js/modules/es.array.flat-map\\";
import \\"core-js/modules/es.array.from\\";
import \\"core-js/modules/es.array.includes\\";
import \\"core-js/modules/es.array.index-of\\";
import \\"core-js/modules/es.array.iterator\\";
import \\"core-js/modules/es.array.join\\";
import \\"core-js/modules/es.array.last-index-of\\";
import \\"core-js/modules/es.array.map\\";
import \\"core-js/modules/es.array.of\\";
import \\"core-js/modules/es.array.reverse\\";
import \\"core-js/modules/es.array.slice\\";
import \\"core-js/modules/es.array.sort\\";
import \\"core-js/modules/es.array.species\\";
import \\"core-js/modules/es.array.splice\\";
import \\"core-js/modules/es.array.unscopables.flat\\";
import \\"core-js/modules/es.array.unscopables.flat-map\\";
import \\"core-js/modules/es.array-buffer.constructor\\";
import \\"core-js/modules/es.array-buffer.is-view\\";
import \\"core-js/modules/es.array-buffer.slice\\";
import \\"core-js/modules/es.date.to-primitive\\";
import \\"core-js/modules/es.function.has-instance\\";
import \\"core-js/modules/es.function.name\\";
import \\"core-js/modules/es.json.to-string-tag\\";
import \\"core-js/modules/es.map\\";
import \\"core-js/modules/es.math.acosh\\";
import \\"core-js/modules/es.math.asinh\\";
import \\"core-js/modules/es.math.atanh\\";
import \\"core-js/modules/es.math.cbrt\\";
import \\"core-js/modules/es.math.clz32\\";
import \\"core-js/modules/es.math.cosh\\";
import \\"core-js/modules/es.math.expm1\\";
import \\"core-js/modules/es.math.fround\\";
import \\"core-js/modules/es.math.hypot\\";
import \\"core-js/modules/es.math.imul\\";
import \\"core-js/modules/es.math.log10\\";
import \\"core-js/modules/es.math.log1p\\";
import \\"core-js/modules/es.math.log2\\";
import \\"core-js/modules/es.math.sign\\";
import \\"core-js/modules/es.math.sinh\\";
import \\"core-js/modules/es.math.tanh\\";
import \\"core-js/modules/es.math.to-string-tag\\";
import \\"core-js/modules/es.math.trunc\\";
import \\"core-js/modules/es.number.constructor\\";
import \\"core-js/modules/es.number.epsilon\\";
import \\"core-js/modules/es.number.is-finite\\";
import \\"core-js/modules/es.number.is-integer\\";
import \\"core-js/modules/es.number.is-nan\\";
import \\"core-js/modules/es.number.is-safe-integer\\";
import \\"core-js/modules/es.number.max-safe-integer\\";
import \\"core-js/modules/es.number.min-safe-integer\\";
import \\"core-js/modules/es.number.parse-float\\";
import \\"core-js/modules/es.number.parse-int\\";
import \\"core-js/modules/es.number.to-fixed\\";
import \\"core-js/modules/es.object.assign\\";
import \\"core-js/modules/es.object.define-getter\\";
import \\"core-js/modules/es.object.define-setter\\";
import \\"core-js/modules/es.object.entries\\";
import \\"core-js/modules/es.object.freeze\\";
import \\"core-js/modules/es.object.from-entries\\";
import \\"core-js/modules/es.object.get-own-property-descriptor\\";
import \\"core-js/modules/es.object.get-own-property-descriptors\\";
import \\"core-js/modules/es.object.get-own-property-names\\";
import \\"core-js/modules/es.object.get-prototype-of\\";
import \\"core-js/modules/es.object.is\\";
import \\"core-js/modules/es.object.is-extensible\\";
import \\"core-js/modules/es.object.is-frozen\\";
import \\"core-js/modules/es.object.is-sealed\\";
import \\"core-js/modules/es.object.keys\\";
import \\"core-js/modules/es.object.lookup-getter\\";
import \\"core-js/modules/es.object.lookup-setter\\";
import \\"core-js/modules/es.object.prevent-extensions\\";
import \\"core-js/modules/es.object.seal\\";
import \\"core-js/modules/es.object.set-prototype-of\\";
import \\"core-js/modules/es.object.to-string\\";
import \\"core-js/modules/es.object.values\\";
import \\"core-js/modules/es.parse-float\\";
import \\"core-js/modules/es.parse-int\\";
import \\"core-js/modules/es.promise\\";
import \\"core-js/modules/es.promise.finally\\";
import \\"core-js/modules/es.reflect.apply\\";
import \\"core-js/modules/es.reflect.construct\\";
import \\"core-js/modules/es.reflect.define-property\\";
import \\"core-js/modules/es.reflect.delete-property\\";
import \\"core-js/modules/es.reflect.get\\";
import \\"core-js/modules/es.reflect.get-own-property-descriptor\\";
import \\"core-js/modules/es.reflect.get-prototype-of\\";
import \\"core-js/modules/es.reflect.has\\";
import \\"core-js/modules/es.reflect.is-extensible\\";
import \\"core-js/modules/es.reflect.own-keys\\";
import \\"core-js/modules/es.reflect.prevent-extensions\\";
import \\"core-js/modules/es.reflect.set\\";
import \\"core-js/modules/es.reflect.set-prototype-of\\";
import \\"core-js/modules/es.regexp.constructor\\";
import \\"core-js/modules/es.regexp.flags\\";
import \\"core-js/modules/es.regexp.to-string\\";
import \\"core-js/modules/es.set\\";
import \\"core-js/modules/es.string.code-point-at\\";
import \\"core-js/modules/es.string.ends-with\\";
import \\"core-js/modules/es.string.from-code-point\\";
import \\"core-js/modules/es.string.includes\\";
import \\"core-js/modules/es.string.iterator\\";
import \\"core-js/modules/es.string.match\\";
import \\"core-js/modules/es.string.pad-end\\";
import \\"core-js/modules/es.string.pad-start\\";
import \\"core-js/modules/es.string.raw\\";
import \\"core-js/modules/es.string.repeat\\";
import \\"core-js/modules/es.string.replace\\";
import \\"core-js/modules/es.string.search\\";
import \\"core-js/modules/es.string.split\\";
import \\"core-js/modules/es.string.starts-with\\";
import \\"core-js/modules/es.string.trim\\";
import \\"core-js/modules/es.string.trim-end\\";
import \\"core-js/modules/es.string.trim-start\\";
import \\"core-js/modules/es.string.anchor\\";
import \\"core-js/modules/es.string.big\\";
import \\"core-js/modules/es.string.blink\\";
import \\"core-js/modules/es.string.bold\\";
import \\"core-js/modules/es.string.fixed\\";
import \\"core-js/modules/es.string.fontcolor\\";
import \\"core-js/modules/es.string.fontsize\\";
import \\"core-js/modules/es.string.italics\\";
import \\"core-js/modules/es.string.link\\";
import \\"core-js/modules/es.string.small\\";
import \\"core-js/modules/es.string.strike\\";
import \\"core-js/modules/es.string.sub\\";
import \\"core-js/modules/es.string.sup\\";
import \\"core-js/modules/es.typed-array.float32-array\\";
import \\"core-js/modules/es.typed-array.float64-array\\";
import \\"core-js/modules/es.typed-array.int8-array\\";
import \\"core-js/modules/es.typed-array.int16-array\\";
import \\"core-js/modules/es.typed-array.int32-array\\";
import \\"core-js/modules/es.typed-array.uint8-array\\";
import \\"core-js/modules/es.typed-array.uint8-clamped-array\\";
import \\"core-js/modules/es.typed-array.uint16-array\\";
import \\"core-js/modules/es.typed-array.uint32-array\\";
import \\"core-js/modules/es.typed-array.copy-within\\";
import \\"core-js/modules/es.typed-array.every\\";
import \\"core-js/modules/es.typed-array.fill\\";
import \\"core-js/modules/es.typed-array.filter\\";
import \\"core-js/modules/es.typed-array.find\\";
import \\"core-js/modules/es.typed-array.find-index\\";
import \\"core-js/modules/es.typed-array.for-each\\";
import \\"core-js/modules/es.typed-array.from\\";
import \\"core-js/modules/es.typed-array.includes\\";
import \\"core-js/modules/es.typed-array.index-of\\";
import \\"core-js/modules/es.typed-array.iterator\\";
import \\"core-js/modules/es.typed-array.join\\";
import \\"core-js/modules/es.typed-array.last-index-of\\";
import \\"core-js/modules/es.typed-array.map\\";
import \\"core-js/modules/es.typed-array.of\\";
import \\"core-js/modules/es.typed-array.reduce\\";
import \\"core-js/modules/es.typed-array.reduce-right\\";
import \\"core-js/modules/es.typed-array.reverse\\";
import \\"core-js/modules/es.typed-array.set\\";
import \\"core-js/modules/es.typed-array.slice\\";
import \\"core-js/modules/es.typed-array.some\\";
import \\"core-js/modules/es.typed-array.sort\\";
import \\"core-js/modules/es.typed-array.subarray\\";
import \\"core-js/modules/es.typed-array.to-locale-string\\";
import \\"core-js/modules/es.typed-array.to-string\\";
import \\"core-js/modules/es.weak-map\\";
import \\"core-js/modules/es.weak-set\\";
import \\"core-js/modules/web.dom-collections.for-each\\";
import \\"core-js/modules/web.dom-collections.iterator\\";
import \\"core-js/modules/web.immediate\\";
import \\"core-js/modules/web.queue-microtask\\";
import \\"core-js/modules/web.url\\";
import \\"core-js/modules/web.url.to-json\\";
import \\"core-js/modules/web.url-search-params\\";
import \\"regenerator-runtime/runtime\\";
var set = new Set([1, 2, 3]);
[1, 2, 3].includes(2);
new Promise(function () {});
Promise.all();
fetch();
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "import _Alert from \\"@lugia/lugia-web/dist/alert\\";
import _Button from \\"@lugia/lugia-web/dist/button\\";
export default (function () {
  return [React.createElement(_Button, null), React.createElement(_Alert, null)];
});",
    "file": "imports.js",
  },
  Object {
    "code": "// eslint-disable-next-line
import React from 'react'; // eslint-disable-next-line

import ReactDOM from 'react-dom';
ReactDOM.render(React.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "// eslint-disable-next-line
import * as React from 'react';

function Hello(_ref) {
  var name = _ref.name,
      _ref$enthusiasmLevel = _ref.enthusiasmLevel,
      enthusiasmLevel = _ref$enthusiasmLevel === void 0 ? 1 : _ref$enthusiasmLevel,
      onIncrement = _ref.onIncrement,
      onDecrement = _ref.onDecrement;

  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

export default Hello; // helpers

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}",
    "file": "react.tsx",
  },
  Object {
    "code": "var x = {
  languageName: '',
  enthusiasmLevel: 1
};
export default x;",
    "file": "typescript.ts",
  },
]
`;

exports[`babel-preset-mega engine: webpackApp, opts: undefined 1`] = `
Array [
  Object {
    "code": "import _regeneratorRuntime \\"./babel-preset-mega\\\\\\\\node_modules\\\\\\\\@babel\\\\\\\\runtime/regenerator\\";
import _asyncToGenerator \\"./babel-preset-mega\\\\\\\\node_modules\\\\\\\\@babel\\\\\\\\runtime/helpers/esm/asyncToGenerator\\";
export default
/*#__PURE__*/
_asyncToGenerator(
/*#__PURE__*/
_regeneratorRuntime.mark(function _callee() {
  var go;
  return _regeneratorRuntime.wrap(function _callee$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
          go = function _ref2() {};

          _context.next = 3;
          return go();

        case 3:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _callee);
}));
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "async.js",
  },
  Object {
    "code": "import \\"core-js/modules/es.symbol\\";
import \\"core-js/modules/es.symbol.description\\";
import \\"core-js/modules/es.symbol.async-iterator\\";
import \\"core-js/modules/es.symbol.has-instance\\";
import \\"core-js/modules/es.symbol.is-concat-spreadable\\";
import \\"core-js/modules/es.symbol.iterator\\";
import \\"core-js/modules/es.symbol.match\\";
import \\"core-js/modules/es.symbol.replace\\";
import \\"core-js/modules/es.symbol.search\\";
import \\"core-js/modules/es.symbol.species\\";
import \\"core-js/modules/es.symbol.split\\";
import \\"core-js/modules/es.symbol.to-primitive\\";
import \\"core-js/modules/es.symbol.to-string-tag\\";
import \\"core-js/modules/es.symbol.unscopables\\";
import \\"core-js/modules/es.array.concat\\";
import \\"core-js/modules/es.array.copy-within\\";
import \\"core-js/modules/es.array.fill\\";
import \\"core-js/modules/es.array.filter\\";
import \\"core-js/modules/es.array.find\\";
import \\"core-js/modules/es.array.find-index\\";
import \\"core-js/modules/es.array.flat\\";
import \\"core-js/modules/es.array.flat-map\\";
import \\"core-js/modules/es.array.from\\";
import \\"core-js/modules/es.array.includes\\";
import \\"core-js/modules/es.array.index-of\\";
import \\"core-js/modules/es.array.iterator\\";
import \\"core-js/modules/es.array.join\\";
import \\"core-js/modules/es.array.last-index-of\\";
import \\"core-js/modules/es.array.map\\";
import \\"core-js/modules/es.array.of\\";
import \\"core-js/modules/es.array.reverse\\";
import \\"core-js/modules/es.array.slice\\";
import \\"core-js/modules/es.array.sort\\";
import \\"core-js/modules/es.array.species\\";
import \\"core-js/modules/es.array.splice\\";
import \\"core-js/modules/es.array.unscopables.flat\\";
import \\"core-js/modules/es.array.unscopables.flat-map\\";
import \\"core-js/modules/es.array-buffer.constructor\\";
import \\"core-js/modules/es.array-buffer.is-view\\";
import \\"core-js/modules/es.array-buffer.slice\\";
import \\"core-js/modules/es.date.to-primitive\\";
import \\"core-js/modules/es.function.has-instance\\";
import \\"core-js/modules/es.function.name\\";
import \\"core-js/modules/es.json.to-string-tag\\";
import \\"core-js/modules/es.map\\";
import \\"core-js/modules/es.math.acosh\\";
import \\"core-js/modules/es.math.asinh\\";
import \\"core-js/modules/es.math.atanh\\";
import \\"core-js/modules/es.math.cbrt\\";
import \\"core-js/modules/es.math.clz32\\";
import \\"core-js/modules/es.math.cosh\\";
import \\"core-js/modules/es.math.expm1\\";
import \\"core-js/modules/es.math.fround\\";
import \\"core-js/modules/es.math.hypot\\";
import \\"core-js/modules/es.math.imul\\";
import \\"core-js/modules/es.math.log10\\";
import \\"core-js/modules/es.math.log1p\\";
import \\"core-js/modules/es.math.log2\\";
import \\"core-js/modules/es.math.sign\\";
import \\"core-js/modules/es.math.sinh\\";
import \\"core-js/modules/es.math.tanh\\";
import \\"core-js/modules/es.math.to-string-tag\\";
import \\"core-js/modules/es.math.trunc\\";
import \\"core-js/modules/es.number.constructor\\";
import \\"core-js/modules/es.number.epsilon\\";
import \\"core-js/modules/es.number.is-finite\\";
import \\"core-js/modules/es.number.is-integer\\";
import \\"core-js/modules/es.number.is-nan\\";
import \\"core-js/modules/es.number.is-safe-integer\\";
import \\"core-js/modules/es.number.max-safe-integer\\";
import \\"core-js/modules/es.number.min-safe-integer\\";
import \\"core-js/modules/es.number.parse-float\\";
import \\"core-js/modules/es.number.parse-int\\";
import \\"core-js/modules/es.number.to-fixed\\";
import \\"core-js/modules/es.object.assign\\";
import \\"core-js/modules/es.object.define-getter\\";
import \\"core-js/modules/es.object.define-setter\\";
import \\"core-js/modules/es.object.entries\\";
import \\"core-js/modules/es.object.freeze\\";
import \\"core-js/modules/es.object.from-entries\\";
import \\"core-js/modules/es.object.get-own-property-descriptor\\";
import \\"core-js/modules/es.object.get-own-property-descriptors\\";
import \\"core-js/modules/es.object.get-own-property-names\\";
import \\"core-js/modules/es.object.get-prototype-of\\";
import \\"core-js/modules/es.object.is\\";
import \\"core-js/modules/es.object.is-extensible\\";
import \\"core-js/modules/es.object.is-frozen\\";
import \\"core-js/modules/es.object.is-sealed\\";
import \\"core-js/modules/es.object.keys\\";
import \\"core-js/modules/es.object.lookup-getter\\";
import \\"core-js/modules/es.object.lookup-setter\\";
import \\"core-js/modules/es.object.prevent-extensions\\";
import \\"core-js/modules/es.object.seal\\";
import \\"core-js/modules/es.object.set-prototype-of\\";
import \\"core-js/modules/es.object.to-string\\";
import \\"core-js/modules/es.object.values\\";
import \\"core-js/modules/es.parse-float\\";
import \\"core-js/modules/es.parse-int\\";
import \\"core-js/modules/es.promise\\";
import \\"core-js/modules/es.promise.finally\\";
import \\"core-js/modules/es.reflect.apply\\";
import \\"core-js/modules/es.reflect.construct\\";
import \\"core-js/modules/es.reflect.define-property\\";
import \\"core-js/modules/es.reflect.delete-property\\";
import \\"core-js/modules/es.reflect.get\\";
import \\"core-js/modules/es.reflect.get-own-property-descriptor\\";
import \\"core-js/modules/es.reflect.get-prototype-of\\";
import \\"core-js/modules/es.reflect.has\\";
import \\"core-js/modules/es.reflect.is-extensible\\";
import \\"core-js/modules/es.reflect.own-keys\\";
import \\"core-js/modules/es.reflect.prevent-extensions\\";
import \\"core-js/modules/es.reflect.set\\";
import \\"core-js/modules/es.reflect.set-prototype-of\\";
import \\"core-js/modules/es.regexp.constructor\\";
import \\"core-js/modules/es.regexp.flags\\";
import \\"core-js/modules/es.regexp.to-string\\";
import \\"core-js/modules/es.set\\";
import \\"core-js/modules/es.string.code-point-at\\";
import \\"core-js/modules/es.string.ends-with\\";
import \\"core-js/modules/es.string.from-code-point\\";
import \\"core-js/modules/es.string.includes\\";
import \\"core-js/modules/es.string.iterator\\";
import \\"core-js/modules/es.string.match\\";
import \\"core-js/modules/es.string.pad-end\\";
import \\"core-js/modules/es.string.pad-start\\";
import \\"core-js/modules/es.string.raw\\";
import \\"core-js/modules/es.string.repeat\\";
import \\"core-js/modules/es.string.replace\\";
import \\"core-js/modules/es.string.search\\";
import \\"core-js/modules/es.string.split\\";
import \\"core-js/modules/es.string.starts-with\\";
import \\"core-js/modules/es.string.trim\\";
import \\"core-js/modules/es.string.trim-end\\";
import \\"core-js/modules/es.string.trim-start\\";
import \\"core-js/modules/es.string.anchor\\";
import \\"core-js/modules/es.string.big\\";
import \\"core-js/modules/es.string.blink\\";
import \\"core-js/modules/es.string.bold\\";
import \\"core-js/modules/es.string.fixed\\";
import \\"core-js/modules/es.string.fontcolor\\";
import \\"core-js/modules/es.string.fontsize\\";
import \\"core-js/modules/es.string.italics\\";
import \\"core-js/modules/es.string.link\\";
import \\"core-js/modules/es.string.small\\";
import \\"core-js/modules/es.string.strike\\";
import \\"core-js/modules/es.string.sub\\";
import \\"core-js/modules/es.string.sup\\";
import \\"core-js/modules/es.typed-array.float32-array\\";
import \\"core-js/modules/es.typed-array.float64-array\\";
import \\"core-js/modules/es.typed-array.int8-array\\";
import \\"core-js/modules/es.typed-array.int16-array\\";
import \\"core-js/modules/es.typed-array.int32-array\\";
import \\"core-js/modules/es.typed-array.uint8-array\\";
import \\"core-js/modules/es.typed-array.uint8-clamped-array\\";
import \\"core-js/modules/es.typed-array.uint16-array\\";
import \\"core-js/modules/es.typed-array.uint32-array\\";
import \\"core-js/modules/es.typed-array.copy-within\\";
import \\"core-js/modules/es.typed-array.every\\";
import \\"core-js/modules/es.typed-array.fill\\";
import \\"core-js/modules/es.typed-array.filter\\";
import \\"core-js/modules/es.typed-array.find\\";
import \\"core-js/modules/es.typed-array.find-index\\";
import \\"core-js/modules/es.typed-array.for-each\\";
import \\"core-js/modules/es.typed-array.from\\";
import \\"core-js/modules/es.typed-array.includes\\";
import \\"core-js/modules/es.typed-array.index-of\\";
import \\"core-js/modules/es.typed-array.iterator\\";
import \\"core-js/modules/es.typed-array.join\\";
import \\"core-js/modules/es.typed-array.last-index-of\\";
import \\"core-js/modules/es.typed-array.map\\";
import \\"core-js/modules/es.typed-array.of\\";
import \\"core-js/modules/es.typed-array.reduce\\";
import \\"core-js/modules/es.typed-array.reduce-right\\";
import \\"core-js/modules/es.typed-array.reverse\\";
import \\"core-js/modules/es.typed-array.set\\";
import \\"core-js/modules/es.typed-array.slice\\";
import \\"core-js/modules/es.typed-array.some\\";
import \\"core-js/modules/es.typed-array.sort\\";
import \\"core-js/modules/es.typed-array.subarray\\";
import \\"core-js/modules/es.typed-array.to-locale-string\\";
import \\"core-js/modules/es.typed-array.to-string\\";
import \\"core-js/modules/es.weak-map\\";
import \\"core-js/modules/es.weak-set\\";
import \\"core-js/modules/web.dom-collections.for-each\\";
import \\"core-js/modules/web.dom-collections.iterator\\";
import \\"core-js/modules/web.immediate\\";
import \\"core-js/modules/web.queue-microtask\\";
import \\"core-js/modules/web.url\\";
import \\"core-js/modules/web.url.to-json\\";
import \\"core-js/modules/web.url-search-params\\";
import \\"regenerator-runtime/runtime\\";
var set = new Set([1, 2, 3]);
[1, 2, 3].includes(2);
new Promise(function () {});
Promise.all();
fetch();
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "/**
 * Created Date: Friday, July 26th 2019, 4:44:28 pm
 * Author: hanjingbo@ysstech.com | jingboup@gmail.com
 * -----
 * Last Modified: Friday, July 26th 2019, 5:03:13 pm
 * Modified By: hanjingbo <hanjingbo@ysstech.com | jingboup@gmail.com>
 * -----
 * Copyright (c) 2019-present, #Lugia#.
 * ------------------------------------
 * JavaScript will save your soul!
 */
import { Button, Alert } from '@lugia/lugia-web';
export default (function () {
  return [React.createElement(Button, null), React.createElement(Alert, null)];
});",
    "file": "imports.js",
  },
  Object {
    "code": "// eslint-disable-next-line
import React from 'react'; // eslint-disable-next-line

import ReactDOM from 'react-dom';
ReactDOM.render(React.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "// eslint-disable-next-line
import * as React from 'react';

function Hello(_ref) {
  var name = _ref.name,
      _ref$enthusiasmLevel = _ref.enthusiasmLevel,
      enthusiasmLevel = _ref$enthusiasmLevel === void 0 ? 1 : _ref$enthusiasmLevel,
      onIncrement = _ref.onIncrement,
      onDecrement = _ref.onDecrement;

  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

export default Hello; // helpers

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}",
    "file": "react.tsx",
  },
  Object {
    "code": "var x = {
  languageName: '',
  enthusiasmLevel: 1
};
export default x;",
    "file": "typescript.ts",
  },
]
`;

exports[`babel-preset-mega engine: webpackLib, opts: {"browsers":"chrome 70"} 1`] = `
Array [
  Object {
    "code": "export default (async () => {
  function go() {}

  await go();
});
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "async.js",
  },
  Object {
    "code": "import \\"core-js/stable\\";
import \\"regenerator-runtime/runtime\\";
const set = new Set([1, 2, 3]);
[1, 2, 3].includes(2);
new Promise(() => {});
Promise.all();
fetch();
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "/**
 * Created Date: Friday, July 26th 2019, 4:44:28 pm
 * Author: hanjingbo@ysstech.com | jingboup@gmail.com
 * -----
 * Last Modified: Friday, July 26th 2019, 5:03:13 pm
 * Modified By: hanjingbo <hanjingbo@ysstech.com | jingboup@gmail.com>
 * -----
 * Copyright (c) 2019-present, #Lugia#.
 * ------------------------------------
 * JavaScript will save your soul!
 */
import { Button, Alert } from '@lugia/lugia-web';
export default (() => {
  return [React.createElement(Button, null), React.createElement(Alert, null)];
});",
    "file": "imports.js",
  },
  Object {
    "code": "// eslint-disable-next-line
import React from 'react'; // eslint-disable-next-line

import ReactDOM from 'react-dom';
ReactDOM.render(React.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "// eslint-disable-next-line
import * as React from 'react';

function Hello({
  name,
  enthusiasmLevel = 1,
  onIncrement,
  onDecrement
}) {
  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

export default Hello; // helpers

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}",
    "file": "react.tsx",
  },
  Object {
    "code": "const x = {
  languageName: '',
  enthusiasmLevel: 1
};
export default x;",
    "file": "typescript.ts",
  },
]
`;

exports[`babel-preset-mega engine: webpackLib, opts: undefined 1`] = `
Array [
  Object {
    "code": "import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _asyncToGenerator from \\"@babel/runtime/helpers/esm/asyncToGenerator\\";
export default
/*#__PURE__*/
_asyncToGenerator(
/*#__PURE__*/
_regeneratorRuntime.mark(function _callee() {
  var go;
  return _regeneratorRuntime.wrap(function _callee$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
          go = function _ref2() {};

          _context.next = 3;
          return go();

        case 3:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _callee);
}));
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "async.js",
  },
  Object {
    "code": "import \\"core-js/stable\\";
import \\"regenerator-runtime/runtime\\";
var set = new Set([1, 2, 3]);
[1, 2, 3].includes(2);
new Promise(function () {});
Promise.all();
fetch();
Object.assign({}, {});
Array.from(new Set([1, 2, 3, 4, 4]));",
    "file": "core.js",
  },
  Object {
    "code": "// eslint-disable-next-line
function foo(one, two, three) {}",
    "file": "flow.js",
  },
  Object {
    "code": "/**
 * Created Date: Friday, July 26th 2019, 4:44:28 pm
 * Author: hanjingbo@ysstech.com | jingboup@gmail.com
 * -----
 * Last Modified: Friday, July 26th 2019, 5:03:13 pm
 * Modified By: hanjingbo <hanjingbo@ysstech.com | jingboup@gmail.com>
 * -----
 * Copyright (c) 2019-present, #Lugia#.
 * ------------------------------------
 * JavaScript will save your soul!
 */
import { Button, Alert } from '@lugia/lugia-web';
export default (function () {
  return [React.createElement(Button, null), React.createElement(Alert, null)];
});",
    "file": "imports.js",
  },
  Object {
    "code": "// eslint-disable-next-line
import React from 'react'; // eslint-disable-next-line

import ReactDOM from 'react-dom';
ReactDOM.render(React.createElement(\\"h1\\", null, \\"Hello, world!\\"), document.getElementById('root'));",
    "file": "react.jsx",
  },
  Object {
    "code": "// eslint-disable-next-line
import * as React from 'react';

function Hello(_ref) {
  var name = _ref.name,
      _ref$enthusiasmLevel = _ref.enthusiasmLevel,
      enthusiasmLevel = _ref$enthusiasmLevel === void 0 ? 1 : _ref$enthusiasmLevel,
      onIncrement = _ref.onIncrement,
      onDecrement = _ref.onDecrement;

  if (enthusiasmLevel <= 0) {
    throw new Error('You could be a little more enthusiastic. :D');
  }

  return React.createElement(\\"div\\", {
    className: \\"hello\\"
  }, React.createElement(\\"div\\", {
    className: \\"greeting\\"
  }, \\"Hello \\", name + getExclamationMarks(enthusiasmLevel)), React.createElement(\\"div\\", null, React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onDecrement
  }, \\"-\\"), React.createElement(\\"button\\", {
    type: \\"button\\",
    onClick: onIncrement
  }, \\"+\\")));
}

export default Hello; // helpers

function getExclamationMarks(numChars) {
  return Array(numChars + 1).join('!');
}",
    "file": "react.tsx",
  },
  Object {
    "code": "var x = {
  languageName: '',
  enthusiasmLevel: 1
};
export default x;",
    "file": "typescript.ts",
  },
]
`;
